--- a/notes/06-20240924-numpy-arrays.ipynb
+++ b/notes/06-20240924-numpy-arrays.ipynb
@@ -6,7 +6,7 @@
         "id": "hgyLvMR_A_1F"
       },
       "source": [
-        "# 2024-1 컴퓨터의 개념 및 실습 (005) 15강 (2024-04-29) 배열과 `numpy` 패키지"
+        "# 2024-2 언어데이터과학 6강 (2024-09-24) 배열과 `numpy` 패키지"
       ]
     },
     {
