--- a/hw/hw05/word-cloud.ipynb
+++ b/hw/hw05/word-cloud.ipynb
@@ -44,32 +44,50 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: pip in c:\\users\\t\\anaconda3\\lib\\site-packages (24.2)\n",
+            "Requirement already satisfied: pip in /usr/local/python/3.12.1/lib/python3.12/site-packages (24.2)\n",
             "Note: you may need to restart the kernel to use updated packages.\n",
-            "Collecting wordcloudNote: you may need to restart the kernel to use updated packages.\n",
-            "\n",
-            "  Downloading wordcloud-1.9.3-cp312-cp312-win_amd64.whl.metadata (3.5 kB)\n",
-            "Requirement already satisfied: numpy>=1.6.1 in c:\\users\\t\\anaconda3\\lib\\site-packages (from wordcloud) (1.26.4)\n",
-            "Requirement already satisfied: pillow in c:\\users\\t\\anaconda3\\lib\\site-packages (from wordcloud) (10.3.0)\n",
-            "Requirement already satisfied: matplotlib in c:\\users\\t\\anaconda3\\lib\\site-packages (from wordcloud) (3.8.4)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\t\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (1.2.0)\n",
-            "Requirement already satisfied: cycler>=0.10 in c:\\users\\t\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (0.11.0)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\t\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (4.51.0)\n",
-            "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\t\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (1.4.4)\n",
-            "Requirement already satisfied: packaging>=20.0 in c:\\users\\t\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (23.2)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\t\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (3.0.9)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\t\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (2.9.0.post0)\n",
-            "Requirement already satisfied: six>=1.5 in c:\\users\\t\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->wordcloud) (1.16.0)\n",
-            "Downloading wordcloud-1.9.3-cp312-cp312-win_amd64.whl (301 kB)\n",
-            "Installing collected packages: wordcloud\n",
-            "Successfully installed wordcloud-1.9.3\n",
-            "Requirement already satisfied: nltk in c:\\users\\t\\anaconda3\\lib\\site-packages (3.8.1)Note: you may need to restart the kernel to use updated packages.\n",
-            "\n",
-            "Requirement already satisfied: click in c:\\users\\t\\anaconda3\\lib\\site-packages (from nltk) (8.1.7)\n",
-            "Requirement already satisfied: joblib in c:\\users\\t\\anaconda3\\lib\\site-packages (from nltk) (1.4.2)\n",
-            "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\t\\anaconda3\\lib\\site-packages (from nltk) (2023.10.3)\n",
-            "Requirement already satisfied: tqdm in c:\\users\\t\\anaconda3\\lib\\site-packages (from nltk) (4.66.4)\n",
-            "Requirement already satisfied: colorama in c:\\users\\t\\anaconda3\\lib\\site-packages (from click->nltk) (0.4.6)\n"
+            "Collecting wordcloud\n",
+            "  Downloading wordcloud-1.9.3-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.4 kB)\n",
+            "Requirement already satisfied: numpy>=1.6.1 in /home/codespace/.local/lib/python3.12/site-packages (from wordcloud) (2.1.0)\n",
+            "Requirement already satisfied: pillow in /home/codespace/.local/lib/python3.12/site-packages (from wordcloud) (10.4.0)\n",
+            "Requirement already satisfied: matplotlib in /home/codespace/.local/lib/python3.12/site-packages (from wordcloud) (3.9.2)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /home/codespace/.local/lib/python3.12/site-packages (from matplotlib->wordcloud) (1.2.1)\n",
+            "Requirement already satisfied: cycler>=0.10 in /home/codespace/.local/lib/python3.12/site-packages (from matplotlib->wordcloud) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /home/codespace/.local/lib/python3.12/site-packages (from matplotlib->wordcloud) (4.53.1)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in /home/codespace/.local/lib/python3.12/site-packages (from matplotlib->wordcloud) (1.4.5)\n",
+            "Requirement already satisfied: packaging>=20.0 in /home/codespace/.local/lib/python3.12/site-packages (from matplotlib->wordcloud) (24.1)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /home/codespace/.local/lib/python3.12/site-packages (from matplotlib->wordcloud) (3.1.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /home/codespace/.local/lib/python3.12/site-packages (from matplotlib->wordcloud) (2.9.0.post0)\n",
+            "Requirement already satisfied: six>=1.5 in /home/codespace/.local/lib/python3.12/site-packages (from python-dateutil>=2.7->matplotlib->wordcloud) (1.16.0)\n",
+            "Downloading wordcloud-1.9.3-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (541 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m541.6/541.6 kB\u001b[0m \u001b[31m6.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: wordcloud\n",
+            "\u001b[33m  WARNING: The script wordcloud_cli is installed in '/usr/local/python/3.12.1/bin' which is not on PATH.\n",
+            "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\u001b[33m\n",
+            "\u001b[0mSuccessfully installed wordcloud-1.9.3\n",
+            "Note: you may need to restart the kernel to use updated packages.\n",
+            "Collecting nltk\n",
+            "  Downloading nltk-3.9.1-py3-none-any.whl.metadata (2.9 kB)\n",
+            "Collecting click (from nltk)\n",
+            "  Downloading click-8.1.7-py3-none-any.whl.metadata (3.0 kB)\n",
+            "Requirement already satisfied: joblib in /home/codespace/.local/lib/python3.12/site-packages (from nltk) (1.4.2)\n",
+            "Collecting regex>=2021.8.3 (from nltk)\n",
+            "  Downloading regex-2024.9.11-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (40 kB)\n",
+            "Collecting tqdm (from nltk)\n",
+            "  Downloading tqdm-4.66.5-py3-none-any.whl.metadata (57 kB)\n",
+            "Downloading nltk-3.9.1-py3-none-any.whl (1.5 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m22.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading regex-2024.9.11-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (797 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m797.0/797.0 kB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading click-8.1.7-py3-none-any.whl (97 kB)\n",
+            "Downloading tqdm-4.66.5-py3-none-any.whl (78 kB)\n",
+            "Installing collected packages: tqdm, regex, click, nltk\n",
+            "\u001b[33m  WARNING: The script tqdm is installed in '/usr/local/python/3.12.1/bin' which is not on PATH.\n",
+            "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\u001b[33m\n",
+            "\u001b[0m\u001b[33m  WARNING: The script nltk is installed in '/usr/local/python/3.12.1/bin' which is not on PATH.\n",
+            "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\u001b[33m\n",
+            "\u001b[0mSuccessfully installed click-8.1.7 nltk-3.9.1 regex-2024.9.11 tqdm-4.66.5\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         }
       ],
@@ -635,7 +653,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.4"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
