--- a/hw/hw05/word-cloud.ipynb
+++ b/hw/hw05/word-cloud.ipynb
@@ -359,10 +359,10 @@
       "source": [
         "counter_all = Counter()\n",
         "\n",
-        "# DO SOMEHING HERE\n",
-        "# DO SOMEHING HERE\n",
-        "# DO SOMEHING HERE\n",
-        "# DO SOMEHING HERE"
+        "# DO SOMETHING HERE\n",
+        "# DO SOMETHING HERE\n",
+        "# DO SOMETHING HERE\n",
+        "# DO SOMETHING HERE"
       ]
     },
     {
