--- a/hw/hw05/word-cloud.ipynb
+++ b/hw/hw05/word-cloud.ipynb
@@ -527,7 +527,7 @@
       "source": [
         "counter_nonstop = counter_all.copy()\n",
         "# DO SOMETHING HERE\n",
-        "# Do SOMEHTING HERE"
+        "# Do SOMETHING HERE"
       ]
     },
     {
