--- a/notes/07-20240926-01-pandas-dataframe.ipynb
+++ b/notes/07-20240926-01-pandas-dataframe.ipynb
@@ -896,7 +896,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "> `df.groupby(['A'])('B').mean()`\n",
+        "> `df.groupby(['A'])['B'].mean()`\n",
         "\n",
         "변수 A가 범주형 데이터로 이루어져 있고 변수 B가 수치형 데이터로 이루어져 있다고 가정하자.\n",
         "\n",
