숙제09 업데이트

--- a/notes/10-20241015-02-wordcloud-nsmc.ipynb
+++ b/notes/10-20241015-02-wordcloud-nsmc.ipynb
@@ -757,7 +757,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "with open('../data/nsmc-counters.pkl', 'wb') as f:\n",
+    "with open('../data/nsmc/nsmc-counters.pkl', 'wb') as f:\n",
     "    pickle.dump(counts, f)"
    ]
   },
