--- a/hw/hw09/hw09-nsmc-wordcloud.ipynb
+++ b/hw/hw09/hw09-nsmc-wordcloud.ipynb
@@ -37,29 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2023-10-19 07:07:09--  https://github.com/suparklingmin/LingDataSci2023/raw/main/data/nsmc-counters.pkl\n",
-      "Resolving github.com (github.com)... 20.205.243.166\n",
-      "Connecting to github.com (github.com)|20.205.243.166|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://raw.githubusercontent.com/suparklingmin/LingDataSci2023/main/data/nsmc-counters.pkl [following]\n",
-      "--2023-10-19 07:07:10--  https://raw.githubusercontent.com/suparklingmin/LingDataSci2023/main/data/nsmc-counters.pkl\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 792522 (774K) [application/octet-stream]\n",
-      "Saving to: ‘nsmc-counters.pkl’\n",
-      "\n",
-      "nsmc-counters.pkl   100%[===================>] 773.95K  --.-KB/s    in 0.008s  \n",
-      "\n",
-      "2023-10-19 07:07:10 (98.6 MB/s) - ‘nsmc-counters.pkl’ saved [792522/792522]\n",
-      "\n"
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100  264k    0  264k    0     0   363k      0 --:--:-- --:--:-- --:--:--  362k\n"
      ]
     }
    ],
@@ -81,7 +68,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "with open('../../data/nsmc-counters.pkl', 'rb') as f:\n",
+    "with open('../../data/nsmc/nsmc-counters.pkl', 'rb') as f:\n",
     "    counts = pickle.load(f)"
    ]
   },
@@ -354,7 +341,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -368,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
