--- a/notes/10-20241015-02-wordcloud-nsmc.ipynb
+++ b/notes/10-20241015-02-wordcloud-nsmc.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 18.6M  100 18.6M    0     0  47.9M      0 --:--:-- --:--:-- --:--:-- 47.8M\n"
+      "100 18.6M  100 18.6M    0     0  11.1M      0  0:00:01  0:00:01 --:--:-- 11.1M\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "[200000 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -416,21 +416,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 81/200000 [00:00<25:28, 130.77it/s] "
+      "  0%|          | 0/200000 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200000/200000 [05:34<00:00, 597.44it/s]\n"
+      "  7%|▋         | 13521/200000 [00:30<06:50, 453.94it/s]"
      ]
     }
    ],
@@ -757,7 +757,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "with open('../data/nsmc-counters.pkl', 'wb') as f:\n",
+    "with open('../data/nsmc/nsmc-counters.pkl', 'wb') as f:\n",
     "    pickle.dump(counts, f)"
    ]
   },
